[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "pandas-xlsx"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
pytz = "^2019.3"
numpy = "^1.18"
pandas = "^1.0"
[tool.poetry.dev-dependencies]
